# gitlab-pipelines

./: .gitignore  README.md  build-debug.bat  build.bat  gitlab-pipelines.py  main.py  requirements.txt  setup.cfg  tray.py  trayapp.py  util.py  version_info.rc
assets/images/: logo.pdn
gitlab-pipelines/: cache.json
src/: event.py  main.py  notification.py  util.py
src/tray/: trayapp.py
