[metadata]
name = gitlabpyp
version = 1.0.0
description = A simple GitLab Pipelines status checker and notifier with system tray icon and simple actions.
author = Ben Dol
author_email = dolb90@gmail.com
license = MIT
license_files = LICENSE
url = https://github.com/BenDol/gitlabpyp

[build-system]
requires = ["setuptools"]

[options]
package_dir =
  = src
python_requires = >= 3.10.1
packages = find:
install_requires =
  winsdk_toast @ git+https://github.com/Mo-Dabao/winsdk_toast.git@main
  pystray==0.19.5
  plyer==2.1.0
  winsdk==1.0.0b10

[options.packages.find]
where = src
exclude = tests*
